tests/examples/bad/wrong_copyright_years_in_filedockblock.php
<?php
/**
 *
 * @file
 * @version 1.0
 * @copyright 2020-2017 CN-Consult GmbH
 * @author Daniel Haas <daniel.haas@cn-consult.eu>
 */
 